crates/core/tests/snapshots/webpack4_unpack_raw__raw_module-27.snap
---
source: crates/core/tests/webpack4_unpack_raw.rs
expression: code
---
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: !0
});
var r = require("./module-11.js"), o = require("./module-18.js"), i = (require("./module-13.js"), function(e) {
    return e && e.__esModule ? e : {
        default: e
    };
}(require("./module-36.js")));
var a = (0, r.combineReducers)({
    router: o.routerReducer,
    main: i.default
});
exports.default = a;
