crates/core/tests/snapshots/webpack4_unpack_raw__raw_module-29.snap
---
source: crates/core/tests/webpack4_unpack_raw.rs
expression: code
---
"use strict";
var r = Object.getOwnPropertySymbols, o = Object.prototype.hasOwnProperty, i = Object.prototype.propertyIsEnumerable;
module.exports = function() {
    try {
        if (!Object.assign) return !1;
        var e = new String("abc");
        if (e[5] = "de", "5" === Object.getOwnPropertyNames(e)[0]) return !1;
        for(var t = {}, n = 0; n < 10; n++)t["_" + String.fromCharCode(n)] = n;
        if ("0123456789" !== Object.getOwnPropertyNames(t).map(function(e) {
            return t[e];
        }).join("")) return !1;
        var r = {};
        return "abcdefghijklmnopqrst".split("").forEach(function(e) {
            r[e] = e;
        }), "abcdefghijklmnopqrst" === Object.keys(Object.assign({}, r)).join("");
    } catch (e) {
        return !1;
    }
}() ? Object.assign : function(e, t) {
    for(var n, a, u = function(e) {
        if (null === e || void 0 === e) throw new TypeError("Object.assign cannot be called with null or undefined");
        return Object(e);
    }(e), l = 1; l < arguments.length; l++){
        for(var c in n = Object(arguments[l]))o.call(n, c) && (u[c] = n[c]);
        if (r) {
            a = r(n);
            for(var s = 0; s < a.length; s++)i.call(n, a[s]) && (u[a[s]] = n[a[s]]);
        }
    }
    return u;
};
