crates/core/tests/snapshots/webpack4_unpack_raw__raw_module-3.snap
---
source: crates/core/tests/webpack4_unpack_raw.rs
expression: code
---
"use strict";
module.exports = require("./module-50.js");
