crates/core/tests/snapshots/webpack4_unpack_raw__raw_module-34.snap
---
source: crates/core/tests/webpack4_unpack_raw.rs
expression: code
---
"use strict";
Object.defineProperty(exports, "__esModule", {
    value: !0
});
exports.history = void 0;
var r = require("./module-11.js"), o = c(require("./module-22.js")), i = require("./module-18.js"), a = require("./module-8.js"), u = c(require("./module-27.js")), l = c(require("./module-33.js"));
function c(e) {
    return e && e.__esModule ? e : {
        default: e
    };
}
var s = exports.history = (0, a.createBrowserHistory)(), f = (0, o.default)(), d = [
    (0, i.routerMiddleware)(s),
    f
], p = (0, r.createStore)(u.default, r.applyMiddleware.apply(void 0, d));
f.run(l.default);
exports.default = p;
